--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,10 @@
 <body>
     <nav>
         <ul>
-            <li><a href="{{ url_for('car_blueprint.get_cars') }}">Cars</a></li>
-            <li><a href="{{ url_for('customer_blueprint.get_customers') }}">Customers</a></li>
-            <li><a href="{{ url_for('employee_blueprint.get_employees') }}">Employees</a></li>
-            <li><a href="{{ url_for('order_blueprint.get_orders') }}">Orders</a></li>
+            <li><a href="{{ url_for('vehicle_blueprint.generate_vehicles') }}">Vehicles</a></li>
+            <li><a href="{{ url_for('customer_blueprint.generate_customer') }}">Customers</a></li>
+            <li><a href="{{ url_for('employee_blueprint.generate_employee') }}">Employees</a></li>
+            <li><a href="{{ url_for('order_blueprint.retrieve_orders') }}">Orders</a></li>
         </ul>
     </nav>
     <div class="container">
