--- a/templates/orders.html
+++ b/templates/orders.html
@@ -10,7 +10,7 @@
         <tr>
             <th>Order ID</th>
             <th>Customer Neo4j ID</th>
-            <th>Car Neo4j ID</th>
+            <th>Vehicle Neo4j ID</th>
             <th>Status</th>
         </tr>
         {% for order in orders %}
