--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <nav>
         <ul>
             <li><a href="{{ url_for('vehicle_blueprint.generate_vehicles') }}">Vehicles</a></li>
-            <li><a href="{{ url_for('customer_blueprint.generate_customer') }}">Customers</a></li>
+            <a href="{{ url_for('employee_blueprint.retrieve_employees') }}">Employees</a>
             <li><a href="{{ url_for('employee_blueprint.generate_employee') }}">Employees</a></li>
             <li><a href="{{ url_for('order_blueprint.retrieve_orders') }}">Orders</a></li>
         </ul>
