Nå er det masse som funker!

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
     <nav>
         <ul>
             <li><a href="{{ url_for('vehicle_blueprint.generate_vehicles') }}">Vehicles</a></li>
-            <a href="{{ url_for('employee_blueprint.retrieve_employees') }}">Employees</a>
-            <li><a href="{{ url_for('employee_blueprint.generate_employee') }}">Employees</a></li>
+            <li><a href="{{ url_for('employee_blueprint.retrieve_employees') }}">Employees</a></li>
+            <li><a href="{{ url_for('customer_blueprint.retrieve_customers') }}">Customers</a></li> <!-- Updated link for Customers -->
             <li><a href="{{ url_for('order_blueprint.retrieve_orders') }}">Orders</a></li>
         </ul>
     </nav>
