--- a/templates/vehicles.html
+++ b/templates/vehicles.html
@@ -15,7 +15,7 @@
             <th>Location</th>
             <th>Status</th>
         </tr>
-        {% for car in cars %}
+        {% for car in vehicles %}  <!-- Updated from 'cars' to 'vehicles' -->
         <tr>
             <td>{{ car.id }}</td>
             <td>{{ car.make }}</td>
