siste push. FERDIG

--- a/templates/orders.html
+++ b/templates/orders.html
@@ -8,14 +8,14 @@
     <h1>Orders</h1>
     <table border="1">
         <tr>
-            <th>Order ID</th>
+            <th>Neo4J Order ID</th>
             <th>Customer Neo4j ID</th>
             <th>Vehicle Neo4j ID</th>
             <th>Status</th>
         </tr>
         {% for order in orders %}
         <tr>
-            <td>{{ order.id }}</td>
+            <td>{{ order.internal_order_id}}</td>
             <td>{{ order.customer_id }}</td>
             <td>{{ order.car_id }}</td>
             <td>{{ order.status }}</td>
